# fastapi-test

./: app.py  apprunner.yaml  main.py  pyproject.toml  requirements.txt
